Revamp TeleportOverlay & PredictiveSmoothAOTE part 1